# SomniaContractAuditor

./: .gitignore  .solhint.json  MANIFEST.in  Makefile  QUICKSTART.md  README.md  auditor.py  build_binary.py  entry_point.py  pyproject.toml  requirements.txt  setup.py  somnia-auditor-linux-x86_64  somnia-auditor.spec
.github/workflows/: build-binaries.yml
scripts/: install.sh  install_binary.sh
src/somnia_contract_auditor/: __init__.py  __main__.py  ai_assistant.py  cli.py  file_discovery.py  report_generator.py  slither_runner.py  solhint_runner.py
test/: contract.sol
